--- a/templates/macros/social.html
+++ b/templates/macros/social.html
@@ -1,4 +1,4 @@
-{%- macro social_links(social_config) %}
+{%- macro social_links(social_config, config) %}
       <nav>
         <ul>
 {%- set base_url = get_url(path="", lang=lang) -%}
