--- a/templates/pages.html
+++ b/templates/pages.html
@@ -21,7 +21,7 @@
     {%- set description = config.description %}
   {%- endif %}
 
-  {{- macros_head::seo(title=title, title_addition=title_addition, description=description) }}
+  {{- macros_head::seo(config=config, title=title, title_addition=title_addition, description=description) }}
 {%- endblock seo %}
 
 {%- block content %}
