--- a/templates/stork_toml.html
+++ b/templates/stork_toml.html
@@ -1,6 +1,9 @@
 {%- import "macros/create_stork_toml.html" as create_stork_toml -%}
+
+{%- if config.extra.search_library %}{%- if config.extra.search_library == "stork" %}
 [input]
 base_directory = "public"
 files = [
-{{ create_stork_toml::from_section(section="_index.md") }}
+{{ create_stork_toml::from_section(section="_index.md", config=config) }}
 ]
+{%- endif %}{%- endif %}
