--- a/templates/tinysearch_json.html
+++ b/templates/tinysearch_json.html
@@ -1,2 +1,5 @@
 {%- import "macros/create_tinysearch_json.html" as create_tinysearch_json -%}
-[{{ create_tinysearch_json::from_section(section="_index.md") }}]
+
+{%- if config.extra.search_library %}{%- if config.extra.search_library == "tinysearch" %}
+[{{ create_tinysearch_json::from_section(section="_index.md", config=config) }}]
+{%- endif %}{%- endif %}
