--- a/templates/page.html
+++ b/templates/page.html
@@ -51,7 +51,7 @@
     {%- endblock page_footer %}
     </article>
     {%- block toc %}
-    {%- if page.extra.toc and config.extra.recent %}
+    {%- if config.extra.recent %}
     {%- set toc = page.toc %}
     {%- endif %}
     {%- if toc %}
